compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__empty_case_of_multi_pattern.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\nlet a = Ok(1)\nlet b = True\ncase a, b {}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:4:1
  │
4 │ case a, b {}
  │ ^^^^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Error(_), _
    Ok(_), _
